# Copyright 2017 The Fuchsia Authors
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice (including the next
# paragraph) shall be included in all copies or substantial portions of the
# Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

import("../../../mesa.gni")

config("local_config") {
  include_dirs = [
    "$mesa_build_root/src/mesa",  # for program/
    "$mesa_build_root/src",  # for compiler/
  ]
}

mesa_source_set("blorp") {
  public_deps = [
    "$mesa_build_root/src/compiler/nir",
  ]

  public_configs = [ ":local_config" ]

  deps = [
    "$mesa_build_root/include:c_compat",
    "$mesa_build_root/src/intel/compiler",
    "$mesa_build_root/src/util:headers",
  ]

  sources = [
    "blorp.c",
    "blorp_blit.c",
    "blorp_clear.c",
    "blorp_genX_exec.h",
    "blorp_priv.h",
  ]
}
