# Copyright 2016 The Fuchsia Authors
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice (including the next
# paragraph) shall be included in all copies or substantial portions of the
# Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

import("../../../mesa.gni")

action("gen_pack7_header") {
  output_name = "gen7_pack.h"
  script_name = "gen_pack_header.py"

  script = "$mesa_build_root/scripts/gn_script_wrapper.py"

  outputs = [
    "$target_gen_dir/$output_name",
  ]

  sources = [
    "gen7.xml",
  ]

  inputs = [
    "$script_name",
  ]

  args = [
    "$magma_python_path",
    rebase_path("$target_gen_dir") + "/$output_name",
    rebase_path(".") + "/$script_name",
    rebase_path(".") + "/gen7.xml",
  ]
}

action("gen_pack75_header") {
  output_name = "gen75_pack.h"
  script_name = "gen_pack_header.py"

  script = "$mesa_build_root/scripts/gn_script_wrapper.py"

  outputs = [
    "$target_gen_dir/$output_name",
  ]

  sources = [
    "gen75.xml",
  ]

  inputs = [
    "$script_name",
  ]

  args = [
    "$magma_python_path",
    rebase_path("$target_gen_dir") + "/$output_name",
    rebase_path(".") + "/$script_name",
    rebase_path(".") + "/gen75.xml",
  ]
}

action("gen_pack8_header") {
  output_name = "gen8_pack.h"
  script_name = "gen_pack_header.py"

  script = "$mesa_build_root/scripts/gn_script_wrapper.py"

  outputs = [
    "$target_gen_dir/$output_name",
  ]

  sources = [
    "gen8.xml",
  ]

  inputs = [
    "$script_name",
  ]

  args = [
    "$magma_python_path",
    rebase_path("$target_gen_dir") + "/$output_name",
    rebase_path(".") + "/$script_name",
    rebase_path(".") + "/gen8.xml",
  ]
}

action("gen_pack9_header") {
  output_name = "gen9_pack.h"
  script_name = "gen_pack_header.py"

  script = "$mesa_build_root/scripts/gn_script_wrapper.py"

  outputs = [
    "$target_gen_dir/$output_name",
  ]

  sources = [
    "gen9.xml",
  ]

  inputs = [
    "$script_name",
  ]

  args = [
    "$magma_python_path",
    rebase_path("$target_gen_dir") + "/$output_name",
    rebase_path(".") + "/$script_name",
    rebase_path(".") + "/gen9.xml",
  ]
}

action("gen_pack10_header") {
  output_name = "gen10_pack.h"
  script_name = "gen_pack_header.py"

  script = "$mesa_build_root/scripts/gn_script_wrapper.py"

  outputs = [
    "$target_gen_dir/$output_name",
  ]

  sources = [
    "gen10.xml",
  ]

  inputs = [
    "$script_name",
  ]

  args = [
    "$magma_python_path",
    rebase_path("$target_gen_dir") + "/$output_name",
    rebase_path(".") + "/$script_name",
    rebase_path(".") + "/gen10.xml",
  ]
}

action("gen_pack11_header") {
  output_name = "gen11_pack.h"
  script_name = "gen_pack_header.py"

  script = "$mesa_build_root/scripts/gn_script_wrapper.py"

  outputs = [
    "$target_gen_dir/$output_name",
  ]

  sources = [
    "gen11.xml",
  ]

  inputs = [
    "$script_name",
  ]

  args = [
    "$magma_python_path",
    rebase_path("$target_gen_dir") + "/$output_name",
    rebase_path(".") + "/$script_name",
    rebase_path(".") + "/gen11.xml",
  ]
}

action("gen_bits_header") {
  output_name = "genX_bits.h"
  script_name = "gen_bits_header.py"

  script = "$mesa_build_root/scripts/gn_script_wrapper.py"

  outputs = [
    "$target_gen_dir/$output_name",
  ]

  sources = [
    "gen7.xml",
    "gen75.xml",
    "gen8.xml",
    "gen9.xml",
    "gen10.xml",
    "gen11.xml",
  ]

  inputs = [
    "$script_name",
  ]

  args = [
    "$magma_python_path",
    rebase_path("$target_gen_dir") + "/$output_name",
    rebase_path(".") + "/$script_name",
    rebase_path(".") + "/gen7.xml",
    rebase_path(".") + "/gen75.xml",
    rebase_path(".") + "/gen8.xml",
    rebase_path(".") + "/gen9.xml",
    rebase_path(".") + "/gen10.xml",
    rebase_path(".") + "/gen11.xml",
  ]
}
